--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "alert": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bson-objectid": "^2.0.4",
     "cookie-parser": "~1.4.4",
@@ -20,7 +21,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
+    "node-notifier": "^10.0.1",
     "nodemon": "^3.0.3",
+    "popups": "^1.1.3",
     "razorpay": "^2.9.2",
     "session": "^0.1.0"
   }
