--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
@@ -26,6 +27,7 @@
     "nodemon": "^3.0.3",
     "popups": "^1.1.3",
     "razorpay": "^2.9.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "trash": "^9.0.0"
   }
 }
