--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bson-objectid": "^2.0.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "del": "^8.0.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "fs-extra": "^11.2.0",
+    "graceful-fs": "^4.2.11",
     "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
@@ -27,6 +29,7 @@
     "nodemon": "^3.0.3",
     "popups": "^1.1.3",
     "razorpay": "^2.9.2",
+    "rimraf": "^6.0.1",
     "session": "^0.1.0",
     "trash": "^9.0.0"
   }
