--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "node-notifier": "^10.0.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.0.3",
     "popups": "^1.1.3",
     "razorpay": "^2.9.2",
