--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "e-commerce",
   "version": "0.0.0",
   "private": true,
+  "main":"app.js",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
